# junction

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: tests.yml
api/: index.html
docs/: api.md  index.md
search/: search_index.json
src/junction/: chain.py  covariance.py  data.py  dynamics.py  plots.py  potential.py  problem.py  species.py  types.py  unit.py  yoshida4.py
test/: test_covariance.py  test_junction.py  test_plots.py  test_solver.py
